@@ -1,2 +1,2 @@
-wanpipe_linux: git ver 75faebc
-wanpipe_common: git ver e63d2a8
+wanpipe_linux: git ver e169e5c
+wanpipe_common: git ver ad197c8
