@@ -1,1 +1,1 @@
-wanpipe-7.0.36
+wanpipe-7.0.37
