@@ -1,5 +1,5 @@
 Package: wanpipe
-Version: 7.0.36-0
+Version: 7.0.37-0
 Section: networking
 Priority: optional
 Architecture: all
